# mimeo

./: .gitignore  .isort.cfg  Makefile  README.md  config-3.json  main.py  mimeo.py  pyproject.toml  requirements.txt
.github/workflows/: coverage_badge.yml  coverage_comment.yml  lint.yml  test.yml
consumers/: __init__.py  consumer_factory.py
examples/: cli-example.sh  cli-examples.sh  config-1.json  config-2.json  config-4.json  config-5.json  config.json  example.py  example.sh  python-example-processing-in-parallel.py  python-example-using-dict.py  python-example-using-input-file.py
examples/1-introduction/: 01-basic.json  01-basic.xml  02-complex.json  02-complex.xml  03-output-format-xml.json  03-output-format-xml.xml  03-xml-attributes.json  03-xml-attributes.xml  04-output-format-json.json  04-output-format-json.xml  04-xml-customization.json  04-xml-customization.xml  05-multiple-templates.xml  05-xml-attributes.json  05-xml-attributes.xml  06-nested-templates.json  06-nested-templates.xml  06-xml-customization.json  06-xml-customization.xml  07-multiple-templates.json  07-multiple-templates.xml  07-output-details-file.json  07-output-details-file.xml  08-nested-templates-for-xml-output.json  08-nested-templates-for-xml-output.xml  08-output-details-stdout.json  08-output-details-stdout.xml  09-nested-templates-for-json-output.json  09-nested-templates-for-json-output.xml  09-output-details-http-using-default.json  09-output-details-http-using-default.xml  10-output-details-http-customized.json  10-output-details-http-customized.xml  10-output-direction-file.xml  11-default-values.json  11-default-values.xml  14-default-values.json  14-default-values.xml
examples/2-mimeo-utils/: 01-auto-increment-raw.json  01-auto-increment-raw.xml  01-auto-increment.json  02-auto-increment-custom-format.json  02-auto-increment-parametrized.json  02-auto-increment-parametrized.xml  03-curr-iter-raw.json  03-curr-iter-raw.xml  03-curr-iter.json  04-curr-iter-custom-model.json  04-curr-iter-parametrized.json  04-curr-iter-parametrized.xml  05-curr-iter-custom-context-custom-model.json  05-curr-iter-parametrized-with-custom-context.json  05-curr-iter-parametrized-with-custom-context.xml  06-get-key.json  06-key-raw.json  06-key-raw.xml  06-key.json  07-get-key-custom-iteration.json  07-key-parametrized.json  07-key-parametrized.xml  08-key-parametrized-with-custom-context.json  08-key-parametrized-with-custom-context.xml  09-get-key-custom-context-custom-iteration.json  09-random-str-raw.json  09-random-str-raw.xml  10-random-str-parametrized.json  10-random-str-parametrized.xml  10-random-str.json  11-random-int-custom-limit.json  11-random-int-raw.json  11-random-int-raw.xml  11-random-str-custom-length.json  12-random-int-parametrized.json  12-random-int-parametrized.xml  12-random-int.json  12-random.json  13-date.json  13-random-item-parametrized.json  (+53 more)
examples/3-reusability/: 01-vars.json  01-vars.xml  02-special-fields.json  02-special-fields.xml  03-refs.json  03-refs.xml
generators/: generator.py  generator_factory.py  xml_generator.py
meta/examples/: get_place.py  put_example.py
meta/linters/: linters.json
model/: exceptions.py  mimeo_config.py
scripts/: collect_cities_and_countries_data.py  collect_currencies_data.py  collect_forenames_data.py  collect_surnames_data.py  get_cities_and_countries_data.py  get_first_name_data.py  get_forename_data.py  get_forenames_data.py  get_surname_data.py  get_surnames_data.py  utils.py
src/mimeo/: __init__.py  __main__.py  exceptions.py  mimeo.py  tools.py
src/mimeo/cli/: __init__.py  exc.py  job.py  parser.py  parsers.py
src/mimeo/config/: __init__.py  constants.py  exc.py  mimeo_config.py
src/mimeo/consumers/: __init__.py  consumer.py  consumer_factory.py  file_consumer.py  http_consumer.py  raw_consumer.py
src/mimeo/context/: __init__.py  annotations.py  decorators.py  exc.py  mimeo_context.py  mimeo_context_manager.py  mimeo_iteration.py
src/mimeo/database/: __init__.py  (+7 more)
src/resources/: cities.csv
tests/: test_mimeo_cli.py  test_mimeograph.py  test_tools.py  utils.py
tests/cli/: test_mimeo_cli.py
tests/config/: test_mimeo_config.py  test_mimeo_config_factory.py  test_mimeo_model.py  test_mimeo_output_details.py  test_mimeo_template.py
tests/consumers/: test_consumer.py  test_consumer_factory.py  test_file_consumer.py  test_http_consumer.py  test_raw_consumer.py
tests/context/: test_annotation_mimeo_context.py  test_annotation_mimeo_context_iteration.py  test_annotation_mimeo_context_switch.py  test_annotation_mimeo_iterations.py  test_decorator_mimeo_context.py  test_decorator_mimeo_context_switch.py  test_decorator_mimeo_iterations.py  test_mimeo_context.py  test_mimeo_context_manager.py  test_mimeo_iteration.py
tests/database/: test_cities_db.py  test_city.py  test_countries_db.py  test_country.py  test_currencies_db.py  test_currency.py  test_first_name.py  test_first_names_db.py  test_last_names_db.py  test_mimeo_db.py
tests/exc/: test_invalid_error_codes.py
tests/generators/: test_generator.py  test_generator_factory.py  test_generator_utils.py  test_json_generator.py  test_xml_generator.py
tests/meta/: test_alive.py  test_singleton_type.py
tests/model/: test_mimeo_config.py  test_mimeo_model.py  test_mimeo_output_details.py  test_mimeo_template.py
tests/utils/: test_auto_increment.py  test_auto_increment_util.py  test_city_util.py  test_country_util.py  test_curr_iter.py  test_curr_iter_util.py  test_currency_util.py  test_date.py  test_date_time.py  test_date_time_util.py  test_date_util.py  test_first_name_util.py  test_key.py  test_key_util.py  test_last_name_util.py  test_mimeo_renderer.py  test_mimeo_util.py  test_mimeo_util_renderer.py  test_phone_util.py  test_random_int.py  test_random_int_util.py  test_random_item.py  test_random_item_util.py  test_random_str.py  test_random_str_util.py  test_refs_renderer.py  test_renderer.py  test_special_fields_renderer.py  test_util_renderer.py  test_utils_renderer.py  test_vars_renderer.py
(+26 files in other folders)
